--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="course__info">
                 <h4>BACHELOR OF SCIENCE IN COMPUTER SCIENCE</h4>
                 <p>Graduates of the BSCS program are well-equipped for careers in software development, data analysis, cybersecurity, and other cutting-edge fields, contributing to the advancement of technology and computing.</p>
-                <a href="courses.html" class="btn btn-primary">Learn More</a>
+                <a href="./bscs.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
@@ -133,7 +133,7 @@
                 <div class="course__info">
                     <h4>BACHELOR OF SCIENCE IN ACCOUNTING INFORMATION SYSTEMS</h4>
                     <p>Aimed at preparing students for the intersection of finance and technology. BSAIS covers areas such as financial accounting, auditing, and management information systems. </p>
-                    <a href="courses.html" class="btn btn-primary">Learn More</a>
+                    <a href="./bsias.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
@@ -146,7 +146,7 @@
                 <div class="course__info">
                 <h4>BACHELOR OF SCIENCE IN ENTREPRENEURSHIP</h4>
                 <p>Developing entrepreneurial capabilities, including strategic planning, market analysis, financial management, and innovation. Gain practical experience in managing their ventures, and decision-making.</p>
-                <a href="courses.html" class="btn btn-primary">Learn More</a>
+                <a href="./bsen.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
         </div>
@@ -349,18 +349,19 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="alumni.html">Alumni</a></li>
                 </ul>
             </div>
 
             <div class="footer__3">
                 <h4>Links</h4>
                 <ul class="privacy">
-                    <li><a href="https://www.amaes.edu.ph/amaes-privacy-policy/">Privacy Policy</a></li>
-                    <li><a href="https://www.amaes.edu.ph/careers/">Careers</a></li>
-                    <li><a href="https://amafranchise.amaes.edu.ph/">Investors</a></li>
-                    <li><a href="https://www.youtube.com/channel/UC34PohtqOjRziDt-TiF6Pkw">AMAES T.V</a></li>
-                    <li><a href="https://news.amaes.edu.ph/">AMA News</a></li>
-                    <li><a href="https://www.amaes.edu.ph/">AMA Education System</a></li>
+                    <li><a href="https://www.amaes.edu.ph/amaes-privacy-policy/" target="_blank">Privacy Policy</a></li>
+                    <li><a href="https://www.amaes.edu.ph/careers/" target="_blank">Careers</a></li>
+                    <li><a href="https://amafranchise.amaes.edu.ph/" target="_blank">Investors</a></li>
+                    <li><a href="https://www.youtube.com/channel/UC34PohtqOjRziDt-TiF6Pkw" target="_blank">AMAES T.V</a></li>
+                    <li><a href="https://news.amaes.edu.ph/" target="_blank">AMA News</a></li>
+                    <li><a href="https://www.amaes.edu.ph/" target="_blank">AMA Education System</a></li>
                 </ul>
             </div>
 
@@ -372,10 +373,10 @@
                 </div>
 
                 <ul class="footer__socials">
-                    <li><a href="https://www.facebook.com/ACLCMalolosOfficial"><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a href="https://www.instagram.com/aclc.malolos/"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://twitter.com/aclcmalolos"><i class="fa-brands fa-x-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/school/aclc-college/"><i class="fa-brands fa-linkedin-in"></i></li>
+                    <li><a href="https://www.facebook.com/ACLCMalolosOfficial" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.instagram.com/aclc.malolos/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://twitter.com/aclcmalolos" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/school/aclc-college/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
                 </ul>
             </div>  
         </div>
