--- a/contact.html
+++ b/contact.html
@@ -96,18 +96,19 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="alumni.html">Alumni</a></li>
                 </ul>
             </div>
 
             <div class="footer__3">
                 <h4>Links</h4>
                 <ul class="privacy">
-                    <li><a href="https://www.amaes.edu.ph/amaes-privacy-policy/">Privacy Policy</a></li>
-                    <li><a href="https://www.amaes.edu.ph/careers/">Careers</a></li>
-                    <li><a href="https://amafranchise.amaes.edu.ph/">Investors</a></li>
-                    <li><a href="https://www.youtube.com/channel/UC34PohtqOjRziDt-TiF6Pkw">AMAES T.V</a></li>
-                    <li><a href="https://news.amaes.edu.ph/">AMA News</a></li>
-                    <li><a href="https://www.amaes.edu.ph/">AMA Education System</a></li>
+                    <li><a href="https://www.amaes.edu.ph/amaes-privacy-policy/" target="_blank">Privacy Policy</a></li>
+                    <li><a href="https://www.amaes.edu.ph/careers/" target="_blank">Careers</a></li>
+                    <li><a href="https://amafranchise.amaes.edu.ph/" target="_blank">Investors</a></li>
+                    <li><a href="https://www.youtube.com/channel/UC34PohtqOjRziDt-TiF6Pkw" target="_blank">AMAES T.V</a></li>
+                    <li><a href="https://news.amaes.edu.ph/" target="_blank">AMA News</a></li>
+                    <li><a href="https://www.amaes.edu.ph/" target="_blank">AMA Education System</a></li>
                 </ul>
             </div>
 
@@ -119,10 +120,10 @@
                 </div>
 
                 <ul class="footer__socials">
-                    <li><a href="https://www.facebook.com/ACLCMalolosOfficial"><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a href="https://www.instagram.com/aclc.malolos/"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://twitter.com/aclcmalolos"><i class="fa-brands fa-x-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/school/aclc-college/"><i class="fa-brands fa-linkedin-in"></i></li>
+                    <li><a href="https://www.facebook.com/ACLCMalolosOfficial" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.instagram.com/aclc.malolos/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://twitter.com/aclcmalolos" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/school/aclc-college/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
                 </ul>
             </div>  
         </div>
