--- a/courses.html
+++ b/courses.html
@@ -59,7 +59,7 @@
                 <div class="course__info">
                     <h4>BACHELOR OF SCIENCE IN ACCOUNTING INFORMATION SYSTEMS</h4>
                     <p>BSAIS graduates are positioned for successful careers in areas like financial analysis, audit, and accounting information system management, with expertise in both accounting and information systems.</p>
-                    <a href="https://www.facebook.com/photo/?fbid=658491379632529&set=a.443108831170786" class="btn btn-primary" target="_blank">Learn More</a>
+                    <a href="./bsias.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
@@ -70,7 +70,7 @@
                 <div class="course__info">
                 <h4>BACHELOR OF SCIENCE IN ENTREPRENEURSHIP</h4>
                 <p>BSEN equips individuals to initiate and grow successful businesses or contribute innovatively to existing enterprises in a rapidly evolving business landscape, blend of theoretical knowledge and hands-on experience.</p>
-                <a href="https://www.facebook.com/photo/?fbid=658503342964666&set=a.443108831170786" class="btn btn-primary" target="_blank">Learn More</a>
+                <a href="./bsen.html" class="btn btn-primary" target="_blank">Learn More</a>
                 </div>
             </article>
 
@@ -114,7 +114,7 @@
                 <div class="course__info">
                 <h4>ASSOCIATE IN COMPUTER TECHNOLOGY</h4>
                 <p>ACT program are well-prepared to contribute to the ever-growing technology sector, whether in technical support, software development, or IT management roles, through theoretical knowledge and hands-on experience.</p>
-                <a href="https://www.facebook.com/photo/?fbid=658487809632886&set=a.443108831170786" class="btn btn-primary" target="_blank">Learn More</a>
+                <a href="./act.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
         </div>
@@ -135,18 +135,19 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="alumni.html">Alumni</a></li>
                 </ul>
             </div>
 
             <div class="footer__3">
                 <h4>Links</h4>
                 <ul class="privacy">
-                    <li><a href="https://www.amaes.edu.ph/amaes-privacy-policy/">Privacy Policy</a></li>
-                    <li><a href="https://www.amaes.edu.ph/careers/">Careers</a></li>
-                    <li><a href="https://amafranchise.amaes.edu.ph/">Investors</a></li>
-                    <li><a href="https://www.youtube.com/channel/UC34PohtqOjRziDt-TiF6Pkw">AMAES T.V</a></li>
-                    <li><a href="https://news.amaes.edu.ph/">AMA News</a></li>
-                    <li><a href="https://www.amaes.edu.ph/">AMA Education System</a></li>
+                    <li><a href="https://www.amaes.edu.ph/amaes-privacy-policy/" target="_blank">Privacy Policy</a></li>
+                    <li><a href="https://www.amaes.edu.ph/careers/" target="_blank">Careers</a></li>
+                    <li><a href="https://amafranchise.amaes.edu.ph/" target="_blank">Investors</a></li>
+                    <li><a href="https://www.youtube.com/channel/UC34PohtqOjRziDt-TiF6Pkw" target="_blank">AMAES T.V</a></li>
+                    <li><a href="https://news.amaes.edu.ph/" target="_blank">AMA News</a></li>
+                    <li><a href="https://www.amaes.edu.ph/" target="_blank">AMA Education System</a></li>
                 </ul>
             </div>
 
@@ -158,10 +159,10 @@
                 </div>
 
                 <ul class="footer__socials">
-                    <li><a href="https://www.facebook.com/ACLCMalolosOfficial"><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a href="https://www.instagram.com/aclc.malolos/"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://twitter.com/aclcmalolos"><i class="fa-brands fa-x-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/school/aclc-college/"><i class="fa-brands fa-linkedin-in"></i></li>
+                    <li><a href="https://www.facebook.com/ACLCMalolosOfficial" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.instagram.com/aclc.malolos/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://twitter.com/aclcmalolos" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/school/aclc-college/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
                 </ul>
             </div>  
         </div>
