--- a/bsen.html
+++ b/bsen.html
@@ -43,8 +43,8 @@
      <header class="header__bsen">
         <div class="container header__container-bsen">
             <div class="header__left-bsen">
-                <h1>BACHELOR OF SCIENCE IN ACCOUNTING INFORMATION SYSTEM</h1>
-                <p>The BSAIS program focuses on fundamental concepts, algorithms, and the practical application of technology in accounting. Students become adept researchers, and proficient of computing solutions tailored for accounting needs for the modern accounting field.</p>
+                <h1>BACHELOR OF SCIENCE IN ENTREPRENEURSHIP</h1>
+                <p>The BSEN program is an intensive exploration of entrepreneurial concepts, theories, and strategic frameworks. It cultivates innovation, creativity, and business acumen, empowering students to identify opportunities, mitigate risks, and drive business success.</p>
                 <p>The curriculum is based on the stantards set by the Commision on Higher Education (CHED) and is benchmarked from the curricula of leading academic institutions, national and international, offering similar business programs, and addresses the needs of the industry.</p>
             </div>
 
@@ -60,45 +60,45 @@
     <section class="categories-bsen">
         <div class="container categories__container-bsen">
             <div class="categories__left-bsen">
-                <h1>WHY BSIAS COURSE?</h1>
-                <p>Here are several compelling reasons why you should consider studying and pursuing a Bachelor of Science in Accounting Information System.</p>
+                <h1>WHY BSEN COURSE?</h1>
+                <p>Here are several compelling reasons why you should consider studying and pursuing a Bachelor of Science in Enrepreneurship.</p>
             </div>
 
             <div class="categories__right-bsen">
                 <article class="category-bsen">
-                    <span class="category__icon-bsen"><i class="fa-solid fa-laptop-file"></i></span>
-                    <h5>Unique Skill</h5>
-                    <p>Accounting principles, equipping graduates with a distinctive skill set highly valued in the business world.</p>
+                    <span class="category__icon-bsen"><i class="fa-solid fa-gears"></i></span>
+                    <h5>Innovation</h5>
+                    <p>Fosters an environment that encourages innovation, creativity, and out-of-the-box thinking, qualities for entrepreneurial.</p>
                 </article>
                 
                 <article class="category-bsen">
-                    <span class="category__icon-bsen"><i class="fa-solid fa-user-gear"></i></span>
-                    <h5>Specialized Career</h5>
-                    <p>Explore various specialized career paths such as Forensic ACCTG, IT Auditing, Compliance Analysis, and Financial Management.</p>
+                    <span class="category__icon-bsen"><i class="fa-solid fa-magnifying-glass-chart"></i></span>
+                    <h5>Business</h5>
+                    <p>Gain a deep understanding of business fundamentals, include market analysis, financial management, strategic planning.</p>
                 </article>
                 
                 <article class="category-bsen">
-                    <span class="category__icon-bsen"><i class="fa-solid fa-file-shield"></i></span>
-                    <h5>Data Integrity</h5>
-                    <p>Maintaining integrity & security of financial data, compliance, regulations, and safeguarding against fraud and cyber threats.</p>
-                </article>
-
-                <article class="category-bsen">
-                    <span class="category__icon-bsen"><i class="fa-solid fa-chart-simple"></i></span>
-                    <h5>Decision-Making</h5>
-                    <p>AIS empower organizations with accounting data and advanced analytics to make informed and strategic business decisions.</p>
+                    <span class="category__icon-bsen"><i class="fa-solid fa-head-side-virus"></i></span>
+                    <h5>Mindset</h5>
+                    <p>Entrepreneurial mindset, confidence, and resilience needed to identify opportunities, ideas into successful ventures.</p>
                 </article>
 
                 <article class="category-bsen">
                     <span class="category__icon-bsen"><i class="fa-solid fa-handshake"></i></span>
-                    <h5>Connectivity</h5>
-                    <p>AIS facilitates communication and collaboration across international borders, supporting global business and financial.</p>
+                    <h5>Networking</h5>
+                    <p>Provide ample opportunities for networking with industry professionals, mentors, fostering potential partnerships.</p>
                 </article>
 
                 <article class="category-bsen">
-                    <span class="category__icon-bsen"><i class="fa-solid fa-arrow-up-right-dots"></i></span>
-                    <h5>Innovation</h5>
-                    <p>Evolving in technology and changes in regulatory, offering professional growth, and innovation in management.</p>
+                    <span class="category__icon-bsen"><i class="fa-solid fa-arrow-trend-up"></i></span>
+                    <h5>Flexibility</h5>
+                    <p>Adapt to changing market conditions and emerging trends. Thrive in fast-paced and unpredictable environments.</p>
+                </article>
+
+                <article class="category-bsen">
+                    <span class="category__icon-bsen"><i class="fa-solid fa-people-carry-box"></i></span>
+                    <h5>Fulfillment</h5>
+                    <p>Impact and bring positive change to society through innovative solutions, products, and services.</p>
                 </article>
             </div>
         </div>
@@ -108,9 +108,9 @@
     <section class="bsen">
         <div class="container bsen__container">
             <div class="bsen__left">
-                <h1>BSIAS</h1>
-                <p>Bachelor of Science in Accounting Information System (BSIAS) is a wise choice for several reasons. Uniquely merges essential accounting knowledge with technology skills, and diverse career paths.</p>
-                <p>BSIAS opens doors to varied opportunities. Its focus on data integrity, strategic decision-making, and continuous innovation ensures relevance in a rapidly evolving business landscape. In essence, of accounting and technology.</p>
+                <h1>BSEN</h1>
+                <p>Bachelor of Science in Entrepreneurship (BSEN) is a wise decision for aspiring entrepreneurs. Fosters innovation, creativity, and business acumen. With an emphasis on developing an entrepreneurial mindset and providing opportunities</p>
+                <p>BSEN equips students with the skills and confidence needed to succeed in the dynamic world of entrepreneurship. It serves as an ideal foundation for individuals looking to make their mark as visionary leaders and impactful changemakers.</p>
             </div>
 
             <div class="bsen__right">
