--- a/courses.html
+++ b/courses.html
@@ -70,7 +70,7 @@
                 <div class="course__info">
                 <h4>BACHELOR OF SCIENCE IN ENTREPRENEURSHIP</h4>
                 <p>BSEN equips individuals to initiate and grow successful businesses or contribute innovatively to existing enterprises in a rapidly evolving business landscape, blend of theoretical knowledge and hands-on experience.</p>
-                <a href="./bsen.html" class="btn btn-primary" target="_blank">Learn More</a>
+                <a href="./bsen.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
