--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="container categories__container">
             <div class="categories__left">
                 <h1>WHY ACLC MALOLOS?</h1>
-                <p>Here are some compelling reasons why you should consider enrolling at ACLC Malolos.</p>
+                <p>Here are some compelling reasons why you should consider enrolling at ACLC College Malolos.</p>
                 <a href="https://www.facebook.com/ACLCMalolosOfficial" class="btn" target="_blank">Learn More</a>
             </div>
 
