--- a/alumni.html
+++ b/alumni.html
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="./css/alumni.css">
 
     <style>
-        body { background-image: url("./image/logo/bg-texture.png"); }
+        body { background-image: url("./image/logo/dark-texture.png"); }
     </style>
 </head>
 <body>
     <nav>
         <div class="container nav__container">
-            <a href="index.html"><img src="./image/logo/aclc.png" style="width: 200px; height: 65px;"></a>
+            <a href="index.html"><img src="./image/logo/aclc.png" style="width: 200px;"></a>
             <ul class="nav__menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -87,10 +87,10 @@
                 <div class="about__image">
                     <div class="about__image-bg"></div>
                     <div class="about__image-lg">
-                        <img src="./image/alumni/alumni2.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni2.jpg" alt="About Image One">
                     </div>
                     <div class="about__image-sm">
-                        <img src="./image/alumni/alumni2.2.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni2.2.jpg" alt="About Image Two">
                     </div>
                 </div>
             </div>
@@ -110,10 +110,10 @@
                 <div class="about__image">
                     <div class="about__image-bg"></div>
                     <div class="about__image-lg">
-                        <img src="./image/alumni/alumni3.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni3.jpg" alt="About Image One">
                     </div>
                     <div class="about__image-sm">
-                        <img src="./image/alumni/alumni3.3.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni3.3.jpg" alt="About Image Two">
                     </div>
                 </div>
             </div>
@@ -133,10 +133,10 @@
                 <div class="about__image">
                     <div class="about__image-bg"></div>
                     <div class="about__image-lg">
-                        <img src="./image/alumni/alumni4.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni4.jpg" alt="About Image One">
                     </div>
                     <div class="about__image-sm">
-                        <img src="./image/alumni/alumni4.4.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni4.4.jpg" alt="About Image Two">
                     </div>
                 </div>
             </div>
@@ -157,10 +157,10 @@
                 <div class="about__image">
                     <div class="about__image-bg"></div>
                     <div class="about__image-lg">
-                        <img src="./image/alumni/alumni5.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni5.jpg" alt="About Image One">
                     </div>
                     <div class="about__image-sm">
-                        <img src="./image/alumni/alumni5.5.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni5.5.jpg" alt="About Image Two">
                     </div>
                 </div>
             </div>
@@ -181,10 +181,10 @@
                 <div class="about__image">
                     <div class="about__image-bg"></div>
                     <div class="about__image-lg">
-                        <img src="./image/alumni/alumni6.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni6.jpg" alt="About Image One">
                     </div>
                     <div class="about__image-sm">
-                        <img src="./image/alumni/alumni6.6.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni6.6.jpg" alt="About Image Two">
                     </div>
                 </div>
             </div>
@@ -205,10 +205,10 @@
                 <div class="about__image">
                     <div class="about__image-bg"></div>
                     <div class="about__image-lg">
-                        <img src="./image/alumni/alumni7.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni7.jpg" alt="About Image One">
                     </div>
                     <div class="about__image-sm">
-                        <img src="./image/alumni/alumni7.7.jpg" alt="About Diana Ayi">
+                        <img src="./image/alumni/alumni7.7.jpg" alt="About Image Two">
                     </div>
                 </div>
             </div>
@@ -227,7 +227,7 @@
     <footer>
         <div class="container footer__container">
             <div class="footer__1">
-                <a href="index.html" class="footer__logo"><img src="./image/logo/ama.png" style="width: 190px; height: 90px;"><p>AMA EDUCATION SYSTEM</p></a>
+                <a href="index.html" class="footer__logo"><img src="./image/logo/ama.png" style="width: 190px;"><p>AMA EDUCATION SYSTEM</p></a>
                 <p>A member of AMA Education System! ACLC Malolos now offers full online education, earn your degree online -anywhere you are in the world.</p>
             </div>
 
