--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <style>
-        body { background-image: url("./image/logo/bg-texture.png"); }
+        body { background-image: url("./image/logo/dark-texture.png"); }
     </style>
 </head>
 <body>
     <nav>
         <div class="container nav__container">
-            <a href="index.html"><img src="./image/logo/aclc.png" style="width: 200px; height: 65px;"></a>
+            <a href="index.html"><img src="./image/logo/aclc.png" style="width: 200px;"></a>
             <ul class="nav__menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="alumni.html">Alumni</a></li>
-            </ul>
+            </ul>            
             <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
             <button id="close-menu-btn"><i class="fa-solid fa-bars-staggered"></i></button>
         </div>
@@ -338,7 +338,7 @@
     <footer>
         <div class="container footer__container">
             <div class="footer__1">
-                <a href="index.html" class="footer__logo"><img src="./image/logo/ama.png" style="width: 190px; height: 90px;"><p>AMA EDUCATION SYSTEM</p></a>
+                <a href="index.html" class="footer__logo"><img src="./image/logo/ama.png" style="width: 190px;"><p>AMA EDUCATION SYSTEM</p></a>
                 <p>A member of AMA Education System! ACLC Malolos now offers full online education, earn your degree online -anywhere you are in the world.</p>
             </div>
 
