--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/contact.css">
 
     <style>
-        body { background-image: url("./image/logo/dark-texture.png"); }
+        body { background-image: url("./image/logo/theme11.jpg"); }
     </style>
 </head>
 <body>
